--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
   <body>
     <via-datepicker value="2016-02-02" format="DD/MM/YYYY" name="start"></via-datepicker>
     <via-datepicker value="2012-02-02" name="end"></via-datepicker>
+    <via-timepicker value="10:02" name="timein"></via-timepicker>
+    <via-timepicker value="20:02" name="timeout"></via-timepicker>
   </body>
 </html>
