--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/icon?family=Roboto" rel=stylesheet>
     <style>
-      body {
+      html {
         font-family: 'Roboto', sans-serif;
-        font-size: 16px;
+        font-size: 62.5%;
       }
       * {
         box-sizing: border-box;
@@ -17,7 +17,7 @@
   <body>
     <via-datepicker value="2016-02-02" format="DD/MM/YYYY" name="start"></via-datepicker>
     <via-datepicker value="2012-02-02" name="end"></via-datepicker>
-    <via-timepicker value="10:02" name="timein"></via-timepicker>
+    <via-timepicker value="10:02:00" name="timein"></via-timepicker>
     <via-timepicker value="20:02" name="timeout"></via-timepicker>
   </body>
 </html>
